...
        TextFormField(
          textDirection: TextDirection.ltr,
          key: _hexKey,
          controller: _hex,
          textCapitalization: TextCapitalization.characters,
          decoration: InputDecoration(
            labelText: 'HEX',
            hintText: '#426B59',
            prefixIcon: Icon(Icons.tag),
          ),
          validator: (value) =>
              RegExp(r'^#[0-9a-fA-F]{6}$').hasMatch(value ?? '')
              ? null
...
