...
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        Row(
          children: [
            Expanded(
              child: TextField(
                key: const ValueKey('theme-name'),
                controller: _name,
                maxLength: 200,
                style: Theme.of(context).textTheme.headlineSmall,
                decoration: InputDecoration(
                  hintText: AppLocalizations.of(context).themeName,
                  counterText: '',
...
